[tool.poetry]
name = "pingbridge"
version = "0.1.0"
description = ""
authors = ["Hilde Aas Nøst <hilde.nost@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
streamlit = "^1.22.0"
pyqt5 = "^5.15.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
